RESOLVED FIXED42127
WKView should override setFrameSize: instead of setFrame:
https://bugs.webkit.org/show_bug.cgi?id=42127
Summary WKView should override setFrameSize: instead of setFrame:
Maciej Stachowiak
Reported 2010-07-12 18:46:56 PDT
WKView should override setFrameSize: instead of setFrame:
Attachments
Patch (1.18 KB, patch)
2010-07-12 18:53 PDT, Maciej Stachowiak
andersca: review+
Maciej Stachowiak
Comment 1 2010-07-12 18:53:57 PDT
Anders Carlsson
Comment 2 2010-07-12 18:56:25 PDT
Comment on attachment 61310 [details] Patch r+
Maciej Stachowiak
Comment 3 2010-07-12 18:59:14 PDT
Note You need to log in before you can comment on or make changes to this bug.