2010-07-12  Maciej Stachowiak  <mjs@apple.com>

Reviewed by Anders Carlsson.

        WKView should override setFrameSize: instead of setFrame:
        https://bugs.webkit.org/show_bug.cgi?id=42127

        * UIProcess/API/mac/WKView.mm:
        (-[WKView setFrameSize:]): Override this method instead of setFrame:,
        since that is the right way to do it.


Canonical link: https://commits.webkit.org/54013@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63157 268f45cc-cd09-0410-ab3c-d52691b4dbfc